tests/neg/i6750.scala
object Foo {
  def bar(i: => Int): Unit  = ???
  def bar(l: => Long): Unit = ??? // error
}
